# ProxyTrace

./: .env.example  .gitignore  Makefile  PROGRESS.md  ProxyTrace_WinningPlan (3).docx  README.md  alembic.ini  docker-compose.test.yml  evaluation_report.md  evaluation_results.json  pyproject.toml  render.yaml  requirements.txt  scratch_drop_all.py  start.ps1
.github/workflows/: ci.yml
forge-app/: README.md  manifest.yml  package-lock.json  package.json
frontend/: package-lock.json  package.json
frontend-v2/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend-v2/src/: App.tsx  main.tsx  vite-env.d.ts
frontend/src/: App.tsx  api.ts  demoTrace.ts  styles.css
migrations/: README  env.py
migrations/versions/: 20260618_0001_initial_schema.py
proxytrace/: __init__.py  schemas.py  settings.py
proxytrace/agent_demo/: __init__.py  agent.py  run_demo.py  tools.py  workflow.py
proxytrace/atlassian/: __init__.py  jira_client.py  jira_patch.py  tools.py
proxytrace/contracts/: SPEC.md  __init__.py  registry.py  schema_hasher.py
proxytrace/data/: README.md  labels.json  (+1 more)
scripts/: test-with-postgres.ps1  test-with-postgres.sh
tests/: test_agent_replay_harness.py  test_ai_scorer.py  test_api_auth.py  test_drift_checker.py  test_drift_routes.py  test_evaluation.py  test_firewall.py  test_frontend_static.py  test_gemini_patch.py  test_jira_patch.py  test_mcp_proxy.py  test_patch_engine.py  test_redaction.py  test_regression_pack.py  test_regression_routes.py  test_schema_hasher.py  test_settings.py  test_strict_replay.py
(+106 files in other folders)
